--- a/roles/pihole/templates/custom.list.j2
+++ b/roles/pihole/templates/custom.list.j2
@@ -1,4 +1,4 @@
 {{ router_ip }} router.lan
 {% for service, props in domains.items() %}
-{{ props.ip }} {{ props.domain|default(service ~ ".lan") }}
+{{ homelab_ip }} {{ props.domain|default(service ~ ".lan") }}
 {% endfor %}
