--- a/roles/pihole/templates/custom.list.j2
+++ b/roles/pihole/templates/custom.list.j2
@@ -1,4 +1,6 @@
-{{ router_ip }} router.lan
+{{ router_ip }} router.lan router
+{{ homelab_ip }} homelab.lan homelab
+{{ pihole_ip }} pihole-pi.lan pihole-pi
 {% for service, props in domains.items() %}
 {{ homelab_ip }} {{ props.domain|default(service ~ ".lan") }}
 {% endfor %}
