--- a/roles/caddy/templates/Caddyfile.j2
+++ b/roles/caddy/templates/Caddyfile.j2
@@ -2,13 +2,12 @@
         email danishkirel@gmail.com
 }
 
-
 danishkirel.asuscomm.com {
-        reverse_proxy {{ homelab_ip }}:{{ homeassistant_http_port }}
+        reverse_proxy {{ homelab_nuc_ip }}:{{ homeassistant_http_port }}
         log
 }
 
-{% for service, props in domains.items() %}
+{% for service, props in services.items() %}
 {{ props.domain|default(service ~ ".lan") }} {
   reverse_proxy {{ props.ip }}:{{ props.http_port }}
   tls internal
