Update homepage config and fix problems

--- a/roles/homepage/templates/settings.yaml.j2
+++ b/roles/homepage/templates/settings.yaml.j2
@@ -5,3 +5,11 @@
 providers:
   openweathermap: openweathermapapikey
   weatherapi: weatherapiapikey
+
+layout:
+  Media:
+  Smart Home:
+    icon: home-assistant.png
+  Config:
+  Monitoring:
+  Network:
