Update virtualhere config

--- a/roles/homepage/templates/docker.yaml.j2
+++ b/roles/homepage/templates/docker.yaml.j2
@@ -14,6 +14,10 @@ nameserver-pi:
   host: {{ nameserver_pi_ip }}
   port: 2375
 
+virtualhere-pi:
+  host: {{ virtualhere_pi_ip }}
+  port: 2375
+
 ailab-um:
   host: {{ ailab_um_ip }}
   port: 2375
