--- a/roles/caddy/templates/Caddyfile.j2
+++ b/roles/caddy/templates/Caddyfile.j2
@@ -3,16 +3,20 @@
         order exec before respond
 }
 
+# docker logs caddy --tail 20000 2>&1 | grep -v -e 'wud.lan' -e pihole -e homepage -e portainer -e Dload | grep -A 2 -E 'exec.*rawon' | grep -E 'rawon|ollama|remote_ip|$'
 http://ollama-raw.lan:11434 {
         reverse_proxy http://192.168.50.10:11434
         tls internal
-        log
+        log {
+                output stdout
+        }
         handle_errors {
                 @502 expression {err.status_code} == 502
                 handle @502 {
                         #wake_on_lan 2C:F0:5D:95:DD:14
                         exec curl -vk -XPOST https://homeassistant.lan/api/webhook/rawon {
                                 pass_thru
+                                log stdout
                         }
                         reverse_proxy http://192.168.50.10:11434 {
                                 lb_try_duration 120s
