--- a/roles/pihole/templates/custom.list.j2
+++ b/roles/pihole/templates/custom.list.j2
@@ -1,5 +1,5 @@
 {{ router_ip }} router.lan router
-{{ homelab_nuc_ip }} homelab.lan homelab
+{{ homelab_nuc_ip }} homelab-nuc.lan homelab-nuc
 {{ nameserver_pi_ip }} pihole-pi.lan pihole-pi
 {{ homelab_nuc_ip }} ollama-raw.lan
 {% for service, props in services.items() %}
