Allow to skip tls

--- a/roles/caddy/templates/Caddyfile.j2
+++ b/roles/caddy/templates/Caddyfile.j2
@@ -31,9 +31,11 @@ danishkirel.asuscomm.com {
 }
 
 {% for service, props in services.items() %}
-{{ props.domain|default(service ~ ".lan") }} {
-        reverse_proxy {{ props.ip }}:{{ props.http_port }}
-        tls internal
+{% if props.tls_skip | default(false) %}http://{% endif %}{{ props.domain|default(service ~ ".lan") }} {
+        reverse_proxy {% if props.tls_skip | default(false) %}http://{% endif %}{{ props.ip }}:{{ props.http_port }}
+        {% if not props.tls_skip | default(false) %}
+        tls internal                                                                               
+        {% endif %}
         log
 }
 {% endfor %}
