Kill system bridge faster

--- a/roles/system_bridge/templates/system-bridge.service.j2
+++ b/roles/system_bridge/templates/system-bridge.service.j2
@@ -8,6 +8,7 @@ ExecStart=/usr/bin/systembridge --no-gui
 # User=root # Removed, defaults to root. Let's see if this avoids the 217/USER error.
 Restart=on-failure
 # RemainAfterExit=yes # Removed, not typically needed for Type=simple services
+TimeoutStopSec=10
 
 [Install]
 WantedBy=multi-user.target
