--- a/roles/pihole/templates/dhcp_conf.j2
+++ b/roles/pihole/templates/dhcp_conf.j2
@@ -1,5 +1,7 @@
 dhcp-option=option:dns-server,{{ nameserver_pi_ip }},{{ homelab_nuc_ip }}
 dhcp-option=tag:nopihole,option:dns-server,{{ google_dns_servers | join(',') }},{{ nameserver_pi_ip }},{{ homelab_nuc_ip }}
+dhcp-option=54,{{ homelab_nuc_ip }}
+dhcp-option=42,{{ homelab_nuc_ip }}
 dhcp-option=121,192.168.8.0/24,{{ router_ip }}
 dhcp-option=249,192.168.8.0/24,{{ router_ip }}
 dhcp-option=option:router,{{ router_ip }}
