--- a/roles/immich/templates/docker-compose.yml.j2
+++ b/roles/immich/templates/docker-compose.yml.j2
@@ -23,6 +23,8 @@ services:
       - /etc/localtime:/etc/localtime:ro
     ports:
       - "{{ immich_http_port }}:2283"
+    devices:
+      - /dev/dri:/dev/dri
     depends_on:
       redis:
         condition: service_started
@@ -70,5 +72,3 @@ services:
       - homepage.name={{ services['immich'].name }} Database
       - homepage.server={{ inventory_hostname }}
       - homepage.container=immich_postgres
-
-volumes:
