--- a/roles/llm_tools/templates/litellm_config.yaml.j2
+++ b/roles/llm_tools/templates/litellm_config.yaml.j2
@@ -33,6 +33,19 @@ model_list:
   {% endif %}
   {% endfor %}
 
+  # Standard Ollama models
+{% if ollama_models is defined %}
+{% for model in ollama_models %}
+  - model_name: {{ model.alias }}
+    litellm_params:
+      model: "ollama_chat/{{ model.name }}"
+      api_base: "http://{{ ollama_host }}:{{ ollama_port }}"
+{% if model.num_ctx is defined %}
+      num_ctx: {{ model.num_ctx }}
+{% endif %}
+{% endfor %}
+{% endif %}
+
   # Fallback to remote model when local is unavailable
   - model_name: home-remote
     litellm_params:
