feat(config): update zigbee2mqtt configuration template and adjust source path

--- a/roles/homeassistant/templates/configuration.yaml.j2
+++ b/roles/homeassistant/templates/configuration.yaml.j2
@@ -31,7 +31,7 @@ serial:
   rtscts: false
 
 frontend:
-  port: '{{ z2m_http_port }}'
+  port: {{ z2m_http_port }}
 
 devices: devices.yml
 groups: groups.yml
