--- a/roles/readeck/templates/docker-compose.yml.j2
+++ b/roles/readeck/templates/docker-compose.yml.j2
@@ -13,6 +13,8 @@ services:
       - READECK_SERVER_HOST=0.0.0.0
       # The TCP port on which Readeck listens. Update container port above to match (right of colon).
       - READECK_SERVER_PORT=8000
+      # Public URL
+      - READECK_SERVER_BASE_URL=https://{{ services['readeck'].domain }}
       # CA certificate for HTTPS requests
       - SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
     ports:
